--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"@contentful/rich-text-react-renderer": "^15.19.3",
 		"contentful": "^10.6.19",
 		"hamburger-react": "^2.5.0",
+		"mapbox-gl": "^3.1.2",
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-map-gl": "^7.1.7",
 		"sass": "^1.70.0"
 	}
 }
