--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"contentful": "^10.6.19",
 		"hamburger-react": "^2.5.0",
 		"mapbox-gl": "^3.1.2",
-		"next": "14.1.0",
+		"next": "^14.2.12",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-map-gl": "^7.1.7",
